# Console-Game-Library

./: .gitignore  CMakeLists.txt  README.md
Lab 1 - Classes in C++/: CMakeLists.txt
Lab 1 - Classes in C++/include/: Circle.h  Rectangle.h  Shape.h  console_interface.h
Lab 1 - Classes in C++/source/: Circle.cpp  Rectangle.cpp  Shape.cpp  console_interface.cpp  main.cpp
include/: CgEngine.h  Circle.h  Rectangle.h  Shape.h  console_interface.h
include/CGL/: CGL.h  Component.h  Components.h  GameObject.h  GraphicsComponent.h  InputComponent.h  PhysicsComponent.h  RenderComponent.h  Renderer.h  ShapeComponent.h  game_object.h
include/PKArt/: PKArt.h  Rectangle.h  Shape.h
source/: CGL.cpp  CgEngine.cpp  Circle.cpp  Rectangle.cpp  Shape.cpp  console_interface.cpp  main.cpp
source/CGL/: CGL.cpp  GameObject.cpp  Renderer.cpp  game_object.cpp
source/CGL/Components/: GraphicsComponent.cpp  InputComponent.cpp  PhysicsComponent.cpp  RenderComponent.cpp  ShapeComponent.cpp
source/PKArt/: Rectangle.cpp  Shape.cpp
